# SCQO

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  RELEASES.toml  RELEASING.md  TUTORIAL.md  pyproject.toml
.claude/: settings.json
scqo/: __init__.py  backend.py  config.py  contract.py  datastore.py  device.py  labconfig.py  parameters.py  physical.py  protocol.py  provenance.py  registry.py  result.py  session.py  testing.py
scqo/cli/: __init__.py  __main__.py  _backends.py  _engine.py  _review.py  calibrate.py  cooldown.py  device.py  devices.py  doctor.py  find.py  run.py  sample.py  sync_launchers.py  tag.py
scqo/experiments/: __init__.py  _sim.py  qubit_drag_alternating.py  qubit_drag_equator.py  qubit_echo.py  qubit_pi_pulse_error.py  qubit_power_rabi.py  qubit_ramsey.py  qubit_relaxation.py  qubit_spectroscopy.py  qubit_sqrb.py  qubit_tomography.py  resonator_spectroscopy.py  resonator_spectroscopy_flux.py  resonator_spectroscopy_power.py  resonator_spectroscopy_power_amp.py  resonator_spectroscopy_power_chain.py  single_shot_readout.py  t1_relaxation.py
scqo/protocols/: __init__.py  power_rabi.py  ramsey.py  resonator_spectroscopy.py
scqo/viewer/: app.py
scqo/viewer/templates/: runs.html  (+2 more)
tests/: conftest.py  test_cli_backends.py  test_cli_cooldown.py  test_cli_devices.py  test_cli_doctor.py  test_cli_run.py  test_cli_sample.py  test_config_history.py  test_contract.py  test_datastore.py  test_end_to_end.py  test_estimator_method_sync.py  test_index_scale.py  test_labconfig.py  test_physical.py  test_quickwins.py  test_setup_state.py  test_viewer.py
