[project]
name = "scqo"
version = "0.1.0"
description = "Superconducting Qubit Orchestration — instrument-agnostic experiment API shared by QM and Qblox backends"
readme = "CLAUDE.md"
requires-python = ">=3.10,<3.13"
license = { text = "BSD-3-Clause" }
dependencies = [
    "pydantic>=2.6",
    "xarray>=2024.7.0",
    "numpy>=1.26",
    "lmfit>=1.3.3",
]

# IMPORTANT: scqo deliberately depends on NO instrument library (no qm-qua, no
# quam, no qualibrate, no qblox-scheduler). That is what lets both LCHQMDriver
# and LCHQBDriver depend on scqo without dragging each other's hardware stack in.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scqo"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.black]
line-length = 120
